<?xml version="1.0"?>
<package format="3">
  <name>px4_ros_rerun</name>
  <version>0.1.0</version>
  <description>Package for visualizing PX4 drones with Rerun</description>
  <maintainer email="peter@freeflysystems.com">Peter Breuer</maintainer>
  <author email="peter@freeflysystems.com">Peter Breuer</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>rerun-sdk</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>